--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       <div class="logo">Thinkfulbnb</div>
       <nav>
         <ul id="menu">
-          <li><a>Stay</a></li>
-          <li><a>About</a></li>
-          <li><a>Ideas</a></li>
-          <li><a>Host</a></li>
+          <li><a href="#stay">Stay</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#ideas">Ideas</a></li>
+          <li><a href="#host">Host</a></li>
         </ul>
       </nav>
     </header>
@@ -35,71 +35,133 @@
       <section id="stay">
         <h2>Find the perfect vacation rental</h2>
         <!-- Create a form here -->
+        <form>
+          <div class="stack">
+            <label for="location">Location</label>
+            <input id="location" type="text" name="location" placeholder="Search destination"/>
+          </div>
+
+          <div class="stack">
+            <label for="arrive">Arrive</label>
+            <input id="arrive" type="date" name="arrive"/>
+          </div>
+
+          <div class="stack">
+            <label for="depart">Depart</label>
+            <input id="depart" type="date" name="depart"/>
+          </div>
+
+          <div class="stack">
+            <label for="type">Type</label>
+            <select id="type" name="type">
+              <option value="apartment">Apartment</option>
+              <option value="barn">Barn</option>
+              <option value="castle">Castle</option>
+              <option value="houseboat">Houseboat</option>
+              <option value="tinyHouse">Tiny House</option>
+              <option value="yacht">Yacht</option>
+              <option value="yurt">Yurt</option>
+            </select>
+          </div>
+          <div>
+            <button type="submit">Search</button>
+          </div>
+        </form>
       </section>
+
 
       <!-- About -->
       <section id="about" class="alternate-background">
         <h2>About</h2>
 
-        <img
-          src="images/vacation-rental-pool.png"
-          alt="Thinkfulbnb - Vacation rental pool"
-        />
+        <div class="group">
+          <div class="group item">
+            <div class="item">
+              <img
+                src="images/vacation-rental-pool.png"
+                alt="Thinkfulbnb - Vacation rental pool"
+              />
+            </div>
 
-        <img
-          src="images/vacation-rental-inside-stone.png"
-          alt="Thinkfulbnb - Vacation rental inside stone"
-        />
+            <div class="item">
+              <img
+                src="images/vacation-rental-inside-stone.png"
+                alt="Thinkfulbnb - Vacation rental inside stone"
+              />
+            </div>
+          </div>
 
-        <p>
-          Fusce porta odio nunc, eget pretium massa rutrum sit amet. Etiam
-          fringilla aliquam dapibus. Maecenas quis nisi sed turpis aliquam
-          porttitor eget ut quam. Sed vel scelerisque ex. Duis in pharetra
-          neque, at tempus lorem. Aenean mi magna, posuere at quam sed, euismod
-          gravida neque.
-        </p>
+          <div class="item" style="justify-content: space-around;">
+            <p>
+              Fusce porta odio nunc, eget pretium massa rutrum sit amet. Etiam
+              fringilla aliquam dapibus. Maecenas quis nisi sed turpis aliquam
+              porttitor eget ut quam. Sed vel scelerisque ex. Duis in pharetra
+              neque, at tempus lorem. Aenean mi magna, posuere at quam sed, euismod
+              gravida neque.
+            </p>
+          </div>
+        </div>
       </section>
 
       <!-- Ideas -->
-      <section id="ideas">
+      <div id="ideas" style="margin-top: 20px;">
         <h2>Ideas</h2>
-        <h3>Forest retreats</h3>
-        <img
-          src="images/forest-retreat.png"
-          alt="Thinkfulbnb - Forest retreat"
-        />
-        <h3>Beaches</h3>
-        <img src="images/beach-house.png" alt="Thinkfulbnb - Beach house" />
+      </div>
 
-        <h3>Rustic cabins</h3>
-        <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
+      <section class="group">
 
-        <h3>Pet-friendly</h3>
-        <img src="images/pet-friendly.png" alt="Thinkfulbnb - Pet-friendly" />
+        <div class="item">
+          <h3>Forest retreats</h3>
+          <img
+            src="images/forest-retreat.png"
+            alt="Thinkfulbnb - Forest retreat"
+          />
+        </div>
+
+        <div class="item">
+          <h3>Beaches</h3>
+          <img src="images/beach-house.png" alt="Thinkfulbnb - Beach house" />
+        </div>
+
+        <div class="item">
+          <h3>Rustic cabins</h3>
+          <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
+        </div>
+
+        <div class="item">
+          <h3>Pet-friendly</h3>
+          <img src="images/pet-friendly.png" alt="Thinkfulbnb - Pet-friendly" />
+        </div>
+
       </section>
 
       <!-- Host -->
-      <section id="host" class="alternate-background">
-        <h2>Want to Become a Thinkfulbnb Host?</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-          molestie in est id efficitur. Sed hendrerit ut turpis quis dapibus.
-          Nam sit amet iaculis lectus. Aliquam erat volutpat. Praesent rhoncus
-          pellentesque eros in aliquet. Sed accumsan elit lacus, id ultrices
-          libero rutrum vitae.
-        </p>
-        <ul>
-          <li>Mauris in pellentesque ligula.</li>
-          <li>Sed accumsan elit lacus, id ultrices libero rutrum vitae.</li>
-          <li>Nunc vitae ex eget neque pellentesque porttitor.</li>
-          <li>Cras mollis lorem sagittis sapien imperdiet blandit. Vivamus.</li>
-          <li>
-            Donec vehicula ipsum nisi, eu consectetur leo feugiat et. Fusce eget
-            hendrerit mauris.
-          </li>
-        </ul>
+      <section id="host" class="alternate-background group">
+        
+        <div class="item" style="justify-content:center">
+          <h2>Want to Become a Thinkfulbnb Host?</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
+            molestie in est id efficitur. Sed hendrerit ut turpis quis dapibus.
+            Nam sit amet iaculis lectus. Aliquam erat volutpat. Praesent rhoncus
+            pellentesque eros in aliquet. Sed accumsan elit lacus, id ultrices
+            libero rutrum vitae.
+          </p>
+          <ul>
+            <li>Mauris in pellentesque ligula.</li>
+            <li>Sed accumsan elit lacus, id ultrices libero rutrum vitae.</li>
+            <li>Nunc vitae ex eget neque pellentesque porttitor.</li>
+            <li>Cras mollis lorem sagittis sapien imperdiet blandit. Vivamus.</li>
+            <li>
+              Donec vehicula ipsum nisi, eu consectetur leo feugiat et. Fusce eget
+              hendrerit mauris.
+            </li>
+          </ul>
+        </div>
 
-        <img src="images/become-a-host.png" alt="Thinkfulbnb - Become a host" />
+        <div class="item">
+          <img src="images/become-a-host.png" alt="Thinkfulbnb - Become a host" />
+        </div>
       </section>
     </main>
 
